--- a/Index.html
+++ b/Index.html
@@ -62,41 +62,52 @@
     <div id='box2' class="mt-4">
         <div class=" d-flex d-flex flex-column justify-content-center gap-2">
             <div class="box mx-auto w-100">
-                <div data-aos="fade-up" data-aos-delay="144"
-                    class="p-3 border w-50 mx-auto rounded-4 border-black text-center mt-3 shadow">
-                    <h6 class=' fw-semibold m-0'>About me
+                <div data-aos="fade-up" data-aos-delay="300"
+                    class="p-3 border w-50 mx-auto rounded-4 border-black text-center my-5 shadow">
+                    <h6 class=' fw-semibold'>About me
                     </h6>
                 </div>
                 <div class="w-75 d-grid gap-2 mx-auto my-4">
                     <div data-aos="fade-up" data-aos-delay="250"
                         class="border border-black p-2 rounded-4 w-100 shadow-sm">
                         <h5 class=" fw-bold">Myself</h5>
-                        <p class='m-0 fw-light'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, quia!
-                            Similique necessitatibus amet excepturi quasi, in alias eaque, dolores doloribus rerum
-                            perferendis sint accusamus</p>
+                        <p class='m-0 fw-light'>Saya adalah seorang developer yang memiliki cita cita untuk menjadi
+                            android developer.Saya telah menekuni rutinitas sebagai developer pemula selama 2 tahun,saya
+                            memulai pembelajaran Front End Developer saya saat masih di kelas 7 SMP.Saya belajar secara
+                            otodidak dan menjadikan youtube sebagai guru dan AI sebagai mentor saya.Sekarang saya sedang
+                            menekuni pembelajaran tentang React.Js sebagai bekal untuk menjadi Android Development
+                            dengan React Native.</p>
                     </div>
                     <div class="d-flex flex-row flexRow justify-content-center gap-2" id='noFlex1'>
                         <div data-aos="fade-up" data-aos-delay="250"
                             class="border border-black p-2 rounded-4 w-50 shadow-sm smallCard">
                             <h6 class="fw-bold">School</h6>
-                            <p class='m-0 fw-light'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis
-                                voluptatibus nesciunt in modi doloribus amet repellat excepturi veniam! Excepturi
-                                mollitia nobis hic aut! Minima quia sint</p>
+                            <p class='m-0 fw-light'>Saya adalah seorang pelajar di kelas Software Engineering di SMK
+                                NEGERI 1 Jakarta.Sekolah saya lumayan bergengsi,pendidikan disini juga sangat mendukung,
+                                relasi yang diberikan oleh guru dan kakak kelas membuat saya bersyukur dapat bersekolah
+                                disini .</p>
                         </div>
                         <div data-aos="fade-up" data-aos-delay="300"
                             class="border border-black p-2 rounded-4 w-50 shadow-sm smallCard">
                             <h6 class="fw-bold">Hobby</h6>
-                            <p class='m-0 fw-light'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo,
-                                quia! Similique necessitatibus amet excepturi quasi, in alias eaque, dolores doloribus
-                                rerum perferendis sint accusamus</p>
+                            <p class='m-0 fw-light'>Jika hobi adalah apa yang saya lakukan di waktu luang,saya kira hobi
+                                saya adalah Membuat sebuah Website,Menuangkan kreativitas saya dengan mendesain poster
+                                atau presentasi.dan saya juga suka untuk menuangkan perasaan saya dengan menghafal lagu
+                                dan memutarnya saat saya sedang coding.</p>
                         </div>
                     </div>
                     <div data-aos="fade-up" data-aos-delay="300"
                         class="border border-black p-2 rounded-4 w-100 shadow-sm">
                         <h5 class=" fw-bold">Skills</h5>
-                        <p class='m-0 fw-light'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, quia!
-                            Similique necessitatibus amet excepturi quasi, in alias eaque, dolores doloribus rerum
-                            perferendis sint accusamus</p>
+                        <p class='m-0 fw-light'>Secara singkat,skill saya adalah skill Junior Front End,Saya mahir dalam
+                            HTML,CSS dan Menengah atau Intermediate dalam bahasa JavaScript,Saya pernah memakai dan
+                            publish web yang memakai PHP dan DataBase,namun saya belum mempelajarinya lebih dalam lagi
+                            karena berfokus untuk JavaScript.
+                            Salah satu project terbesar saya adalah website OSPK yang saya buat saat saya kelas
+                            8,websitenya memang sederhana,dan masih jauh dari segi UI dan UX daripada mini project yang
+                            saya kerjakan sekarang,namun dari semua ketidak sempurnaaan dari web itu, saya menjadi makin
+                            tertantang untuk belajar lebih
+                        </p>
                     </div>
                 </div>
             </div>
@@ -135,8 +146,8 @@
                                                         Lorem, ipsum.
                                                     </div>
                                                 </div>
-                                                <button class='actionBtn border border-black text-black'
-                                                    id="next">-></button>
+                                                <button class='actionBtn border border-black text-black' id="next">->
+                                                </button>
                                     </div>
                                 </div>
                             </div>
@@ -154,7 +165,7 @@
         <div class="w-75 mx-auto skillBox">
             <div class="d-flex flex-column justify-content-center gap-2" id="skillFlex">
                 <div class="d-flex flexRow justify-content-center gap-2">
-                    <div data-aos={prop.anim} data-aos-delay={prop.delay}
+                    <div data-aos="fade-up" data-aos-delay="100"
                         class="border border-black p-2 rounded-4 w-100 shadow-sm d-flex align-items-center flex-column phoneCardBox">
                         <img src="./public/html.png" class="skillImg" />
                         <h3 class='fw-bold'>HTML</h3>
@@ -163,7 +174,7 @@
                         <p class='m-0 fs-6 fw-light'>Menguasai struktur dasar dan semantik elemen HTML5. Mampu membangun
                             tata letak halaman web yang kompleks dan terorganisir dengan baik.</p>
                     </div>
-                    <div data-aos={prop.anim} data-aos-delay={prop.delay}
+                    <div data-aos="fade-up" data-aos-delay="150"
                         class="border border-black p-2 rounded-4 w-100 shadow-sm d-flex align-items-center flex-column phoneCardBox">
                         <img src="./public/css.png" class="skillImg" />
                         <h3 class='fw-bold'>CSS</h3>
@@ -175,7 +186,7 @@
                     </div>
                 </div>
                 <div class="d-flex flexRow justify-content-center gap-2">
-                    <div data-aos={prop.anim} data-aos-delay={prop.delay}
+                    <div data-aos="fade-up" data-aos-delay="200"
                         class="border border-black p-2 rounded-4 w-100 shadow-sm d-flex align-items-center flex-column phoneCardBox">
                         <img src="./public/js.png" class="skillImg" />
                         <h3 class='fw-bold'>JavaScript</h3>
@@ -185,7 +196,7 @@
                             seperti async/await. Mampu mengembangkan aplikasi web interaktif, dinamis, dan berperforma
                             tinggi.</p>
                     </div>
-                    <div data-aos={prop.anim} data-aos-delay={prop.delay}
+                    <div data-aos="fade-up" data-aos-delay="250"
                         class="border border-black p-2 rounded-4 w-100 shadow-sm d-flex align-items-center flex-column phoneCardBox">
                         <img src="./public/php.png" class="skillImg" />
                         <h3 class='fw-bold'>PHP</h3>
