--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                     <h1 class='m-0 text-white fw-bold'>HELLO , IM </h1>
                     <h1 class='m-0 text-white fw-bold'>DEDYAS</h1>
                     <button id='btn1' class='p-4 px-3 mt-2 rounded-pill border-2 border-light'>
-                        <a class=' text-decoration-none' href="https://github.com/kingdedymulyono">
-                            Visit Me On GIthub
+                        <a class=' text-decoration-none' target="_blank" href="https://github.com/kingdedymulyono">
+                            Visit Me On Github
+                            <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
                     </button>
                 </div>
@@ -64,14 +65,17 @@
             <div class="box mx-auto w-100">
                 <div data-aos="fade-up" data-aos-delay="300"
                     class="p-3 border w-50 mx-auto rounded-4 border-black text-center my-5 shadow">
-                    <h6 class=' fw-semibold'>About me
+                    <h6 class=' fw-semibold m-0'>About me 😎
                     </h6>
                 </div>
                 <div class="w-75 d-grid gap-2 mx-auto my-4">
                     <div data-aos="fade-up" data-aos-delay="250"
-                        class="border border-black p-2 rounded-4 w-100 shadow-sm">
-                        <h5 class=" fw-bold">Myself</h5>
-                        <p class='m-0 fw-light'>Saya adalah seorang developer yang memiliki cita cita untuk menjadi
+                        class="border border-black p-3 rounded-4 w-100 shadow-sm">
+                        <h5 class=" fw-bold">Myself
+                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        </h5>
+                        <p class='m-0 fw-light'><b>Saya</b> adalah seorang developer yang memiliki cita cita untuk
+                            menjadi
                             android developer.Saya telah menekuni rutinitas sebagai developer pemula selama 2 tahun,saya
                             memulai pembelajaran Front End Developer saya saat masih di kelas 7 SMP.Saya belajar secara
                             otodidak dan menjadikan youtube sebagai guru dan AI sebagai mentor saya.Sekarang saya sedang
@@ -80,16 +84,20 @@
                     </div>
                     <div class="d-flex flex-row flexRow justify-content-center gap-2" id='noFlex1'>
                         <div data-aos="fade-up" data-aos-delay="250"
-                            class="border border-black p-2 rounded-4 w-50 shadow-sm smallCard">
-                            <h6 class="fw-bold">School</h6>
+                            class="border border-black p-3 rounded-4 w-50 shadow-sm smallCard">
+                            <h6 class="fw-bold">School
+                                <i class="fa fa-school" aria-hidden="true"></i>
+                            </h6>
                             <p class='m-0 fw-light'>Saya adalah seorang pelajar di kelas Software Engineering di SMK
                                 NEGERI 1 Jakarta.Sekolah saya lumayan bergengsi,pendidikan disini juga sangat mendukung,
                                 relasi yang diberikan oleh guru dan kakak kelas membuat saya bersyukur dapat bersekolah
                                 disini .</p>
                         </div>
                         <div data-aos="fade-up" data-aos-delay="300"
-                            class="border border-black p-2 rounded-4 w-50 shadow-sm smallCard">
-                            <h6 class="fw-bold">Hobby</h6>
+                            class="border border-black p-3 rounded-4 w-50 shadow-sm smallCard">
+                            <h6 class="fw-bold">Hobby
+                                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            </h6>
                             <p class='m-0 fw-light'>Jika hobi adalah apa yang saya lakukan di waktu luang,saya kira hobi
                                 saya adalah Membuat sebuah Website,Menuangkan kreativitas saya dengan mendesain poster
                                 atau presentasi.dan saya juga suka untuk menuangkan perasaan saya dengan menghafal lagu
@@ -97,8 +105,10 @@
                         </div>
                     </div>
                     <div data-aos="fade-up" data-aos-delay="300"
-                        class="border border-black p-2 rounded-4 w-100 shadow-sm">
-                        <h5 class=" fw-bold">Skills</h5>
+                        class="border border-black p-3 rounded-4 w-100 shadow-sm">
+                        <h5 class=" fw-bold">Skills
+                            <i class="fa-solid fa-gears"></i>
+                        </h5>
                         <p class='m-0 fw-light'>Secara singkat,skill saya adalah skill Junior Front End,Saya mahir dalam
                             HTML,CSS dan Menengah atau Intermediate dalam bahasa JavaScript,Saya pernah memakai dan
                             publish web yang memakai PHP dan DataBase,namun saya belum mempelajarinya lebih dalam lagi
@@ -220,25 +230,33 @@
                 <div class="">
                     <div class="d-flex flex-column justify-content-center gap-2">
                         <span class=' fw-bold'>About Me</span>
-                        <span>Amba</span>
-                        <span>Tukam</span>
-                        <span>Ohhh</span>
+                        <a class="link rounded-3" href="#">Myself</a>
+                        <a class="link rounded-3" href="#">Skills</a>
+                        <a class="link rounded-3" href="#">Quote</a>
                     </div>
                 </div>
                 <div class="">
                     <div class="d-flex flex-column justify-content-center gap-2">
                         <span class="fw-bold">Social Media</span>
-                        <a href=''>Amba</a>
-                        <a href=''>Sing</a>
-                        <a href=''>Hpmhh</a>
+                        <a class="link rounded-3 text-center" id="link1" target="_blank"
+                            href='https://instagram.com/dedyas_'>
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            Instagram</a>
+                        <a class="link rounded-3 text-center" id="link2" target="_blank" href=''>
+                            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                            Linkedin</a>
+                        <a class="link rounded-3 text-center" id="link3" target="_blank" href=''>
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            Email
+                        </a>
                     </div>
                 </div>
                 <div class="">
                     <div class="d-flex flex-column justify-content-center gap-2">
                         <span class="fw-bold">Project </span>
-                        <span>Amba</span>
-                        <span>Tunat</span>
-                        <span>AAAAA</span>
+                        <span class="link rounded-3">Website OSPK</span>
+                        <span class="link rounded-3">Dynamic WebClass</span>
+                        <span class="link rounded-3">To Do List</span>
                     </div>
                 </div>
             </div>
@@ -251,6 +269,7 @@
     </p>
 </footer>
 <script src="./script/Script.js"></script>
+<script src="https://kit.fontawesome.com/4fe2a163b2.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
     crossorigin="anonymous"></script>
