--- a/index.html
+++ b/index.html
@@ -25,12 +25,23 @@
                     <h4 class='m-0 text-white fw-light'>FrontEnd Dev</h4>
                     <h1 class='m-0 text-white fw-bold'>HELLO , IM </h1>
                     <h1 class='m-0 text-white fw-bold'>DEDYAS</h1>
-                    <button id='btn1' class='p-4 px-3 mt-2 rounded-pill border-2 border-light'>
+                    <button id='btn1' class='p-3 mt-2 rounded-pill border-2 border-light d-flex align-items-center justify-content-center'>
                         <a class=' text-decoration-none' target="_blank" href="https://github.com/kingdedymulyono">
+                            <img src="" alt="">
                             Visit Me On Github
-                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <img src="https://avatars.githubusercontent.com/u/223222620?v=4" alt="" class="myImg shadow-sm m-0">
                         </a>
                     </button>
+                    <div class="friend text-white fw-light mx-4 p-1">
+                        Friends
+                        <div class="d-flex">
+                            <img src="https://avatars.githubusercontent.com/u/99881216?s=130&v=4" alt="" class="friendImg shadow-sm">
+                            <img src="http://avatars.githubusercontent.com/u/173541951?s=130&v=4" alt="" class="friendImg shadow-sm">
+                            <img src="https://avatars.githubusercontent.com/u/183389514?s=130&v=4" alt="" class="friendImg shadow-sm">
+                            <img src="https://avatars.githubusercontent.com/u/217588629?s=130&v=4" alt="" class="friendImg shadow-sm">
+                            <img src="https://avatars.githubusercontent.com/u/148072933?s=130&v=4" alt="" class="friendImg shadow-sm">
+                        </div>
+                    </div>
                 </div>
             </div>
 
