--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="halfDiv heroDiv m-4">
                 <div data-aos="fade-up" data-aos-delay="100" class=" d-flex heroDiv halfDivJcs">
-                    <img class='placeholder boxImg bg-light-subtle rounded-circle' src="./public/dedyas.png" alt="" />
+                    <img class='placeholder boxImg bg-light-subtle rounded-circle' src="./public/dedyas1.png" alt="" />
                 </div>
             </div>
         </div>
@@ -234,7 +234,21 @@
             </div>
         </div>
     </div>
-
+    <div class="bg-black text-white mt-4 py-3" id="">
+        <!-- <div class="reverseFadeBox"></div> -->
+        <div class="mt-3">
+            <h1 class="m-4 fw-semibold">Abstrak</h1>
+            <p class="m-4 fw-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur labore, aut culpa
+                non quis, doloremque possimus exercitationem earum natus nesciunt molestias vero expedita pariatur quae
+                et dolores amet temporibus placeat odit! Neque soluta unde eos dignissimos, tempora repellat inventore
+                corporis tenetur velit minus magni voluptas laborum beatae dolore magnam accusamus adipisci incidunt non
+                ea et eum nostrum debitis suscipit. Velit nostrum nisi cumque saepe nihil sequi incidunt obcaecati
+                inventore eligendi quis ratione facilis dicta, voluptatibus magni, iure aut quisquam dolorum corporis
+                blanditiis expedita labore eveniet. Explicabo libero ullam necessitatibus nesciunt inventore, enim
+                deserunt. Autem ab quam nulla inventore aperiam sunt voluptates natus quis laboriosam itaque facilis</p>
+            <!-- <div class="fadeBox"></div> -->
+        </div>
+    </div>
 </body>
 <footer>
     <div id='footer' class=' bg-secondary-subtle text-white'>
