--- a/index.html
+++ b/index.html
@@ -227,12 +227,17 @@
                         <h3 class='fw-bold'>PHP</h3>
                         <span class='text-secondary fs-6'>Level :
                             <span class="fw-semibold text-success">Beginner</span></span>
-                        <p class='m-0 fs-6 fw-light'>Memiliki pemahaman dasar tentang sintaks dan alur kerja PHP. Baru
+                        <p class='m-0 fs-6 fw-light'>Memiliki pemahaman dasar tentang EDYAS
+                        
+                         Visit Me On Gitsintaks dan alur kerja PHP. Baru
                             mulai mempelajari cara menggunakan PHP untuk skrip sisi server sederhana.</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div 
+    class="playlist w-100 d-flex justify-content-center align-items-center flex-column gap-2" id="playlistBox">
     </div>
     <div class="bg-black text-white mt-4 py-3" id="">
         <!-- <div class="reverseFadeBox"></div> -->
