--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/box.css">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/Style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -228,16 +228,15 @@
                         <span class='text-secondary fs-6'>Level :
                             <span class="fw-semibold text-success">Beginner</span></span>
                         <p class='m-0 fs-6 fw-light'>Memiliki pemahaman dasar tentang EDYAS
-                        
-                         Visit Me On Gitsintaks dan alur kerja PHP. Baru
+
+                            Visit Me On Gitsintaks dan alur kerja PHP. Baru
                             mulai mempelajari cara menggunakan PHP untuk skrip sisi server sederhana.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div 
-    class="playlist w-100 d-flex justify-content-center align-items-center flex-column gap-2" id="playlistBox">
+    <div class="playlist w-100 d-flex justify-content-center align-items-center flex-column gap-2" id="playlistBox">
     </div>
     <div class="bg-black text-white mt-4 py-3" id="">
         <!-- <div class="reverseFadeBox"></div> -->
