add playlist v2 fix 1

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </head>
 
 <body>
+    <div id="loadingBox" class="gap-4">
+        <span class="loader"></span>
+        Wait A Moment...
+    </div>
     <div id="box1">
         <div class="" id="topDiv">
             <div data-aos="fade-up" class="heroDiv halfDiv">
@@ -236,7 +240,7 @@
             </div>
         </div>
     </div>
-    <div class="playlist w-100 d-flex justify-content-center align-items-center flex-column gap-2" id="playlistBox">
+    <div data-aos="fade-up" data-aos-delay="256" class="playlist w-100 d-flex justify-content-center align-items-center flex-column gap-2" id="playlistBox">
     </div>
     <div class="bg-black text-white mt-4 py-3" id="">
         <!-- <div class="reverseFadeBox"></div> -->
